Datagen is working correctly. Alphabetized the registries. Next is to test making more vanilla brains via JSON.